# braintu_be

./: manage.py  pyproject.toml
braincards/: apps.py  models.py  serializers.py  urls.py  views.py
braincards/migrations/: 0001_initial.py
brainspaces/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
brainspaces/migrations/: 0001_initial.py
braintu_be/: asgi.py  settings.py  urls.py  v1_urls.py  wsgi.py
tags/: models.py  serializers.py  urls.py  views.py
tags/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
